# Voice_agent_XPL_Assessment

./: .env.example  .gitignore  main.py
UI/sunmarke-voice-agent/: package-lock.json  package.json
UI/sunmarke-voice-agent/src/app/: README.md  page.tsx  pyproject.toml  requirements.txt
UI/sunmarke-voice-agent/src/app/components/: model_response_card.tsx  voice_recorder.tsx
UI/sunmarke-voice-agent/src/app/utils/: api.ts
api/: routes.py
core/: config.py
db/: init_db.py  pg_engine.py  pg_vector.py  vector_store.py
ingestion/: chunker.py  firecrawl_scraper.py  ingest.py  metadata.py  scraper.py
schemas/: query_schema.py
services/: RAG_service.py  embedding.py  gemini.py  inspect_embedding.py
services/llms/: deepseek.py  gemini.py  kimi.py
services/voice_handling/: main_voice_Agent.py  voice_input.py  voice_output.py
