[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sunmarke-voice-agent"
version = "0.1.0"
description = "Sunmarke School multi-model RAG voice agent backend"
requires-python = ">=3.10"

dependencies = [
    # ── Web framework ──────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",       # file uploads (audio)

    # ── Environment & config ───────────────────────
    "python-dotenv>=1.0.0",

    # ── LangChain core ─────────────────────────────
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",

    # ── Embeddings ─────────────────────────────────
    "langchain-google-genai>=1.0.0",  # Gemini embeddings
    "cohere>=5.5.0",                  # Cohere fallback embeddings

    # ── Vector store ───────────────────────────────
    "faiss-cpu>=1.8.0",               # local vector store

    # ── LLM API clients ────────────────────────────
    "requests>=2.32.0",               # DeepSeek + Kimi via OpenRouter (HTTP)
    "google-generativeai>=0.7.0",     # Gemini direct SDK

    # ── Speech-to-text ─────────────────────────────
    "openai-whisper>=20231117",       # local Whisper transcription
    "soundfile>=0.12.1",              # audio file I/O
    "numpy>=1.26.0",

    # ── Text-to-speech ─────────────────────────────
    "gTTS>=2.5.1",                    # Google TTS (lightweight)

    # ── Async / streaming ──────────────────────────
    "httpx>=0.27.0",                  # async HTTP for parallel LLM calls
    "anyio>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",                  # test client
    "ruff>=0.4.0",                    # linter + formatter
    "mypy>=1.10.0",                   # type checking
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]